--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "AllowedHosts": "*",
+  //"ConnectionString": "mongodb+srv://api:bNt1t4cfbi4ajZ0d@cluster0.mg203.mongodb.net/myFirstDatabase?retryWrites=true&w=majority",
   "ConnectionString": "mongodb+srv://api:bNt1t4cfbi4ajZ0d@cluster0.mg203.mongodb.net/myFirstDatabase?retryWrites=true&w=majority",
-  //"ConnectionString": "mongodb+srv://api:bNt1t4cfbi4ajZ0d@cluster0.mg203.mongodb.net/coronavirus?connect=replicaSet&retryWrites=true&w=majority",
   "NomeBanco": "coronavirus"
 }
